improvement: allow wrap text presented as customer name (visual fixes)

--- a/css/style.less
+++ b/css/style.less
@@ -2449,12 +2449,15 @@ fieldset {
 }
 
 .lms-ui-customer-search-container {
-	display: inline-block;
+	display: inline;
 	margin-left: 0.5em;
+	white-space: normal;
 	input {
 		box-sizing: border-box;
 		width: 7em;
 		padding-right: 1.4em;
+		margin-top: 0.5em;
+		margin-bottom: 0.5em;
 
 		&:focus+div {
 			visibility: visible;
